objects/Asset__x.object
<CustomObject>
    <fields>
        <fullName>SAP_System_Address_Postal_Code_c__c</fullName>
        <externalDeveloperName>SAP_System_Address_Postal_Code__c</externalDeveloperName>
        <label>SAP System Address Postal Code</label>
        <length>10</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_System_Address_State_Province_c__c</fullName>
        <externalDeveloperName>SAP_System_Address_State_Province__c</externalDeveloperName>
        <label>SAP System Address State/Province</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_System_Address_Street_Number_2_c__c</fullName>
        <externalDeveloperName>SAP_System_Address_Street_Number_2__c</externalDeveloperName>
        <label>SAP System Address Street/Number 2</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_System_Address_Street_Number_c__c</fullName>
        <externalDeveloperName>SAP_System_Address_Street_Number__c</externalDeveloperName>
        <label>SAP System Address Street/Number</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPinterfaced_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>SAPinterfaced__c</externalDeveloperName>
        <label>SAPinterfaced</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBS_Line_c__c</fullName>
        <externalDeveloperName>SBS_Line__c</externalDeveloperName>
        <label>SBS Line</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SalesContractEndDate_c__c</fullName>
        <externalDeveloperName>SalesContractEndDate__c</externalDeveloperName>
        <label>Sales Contract End Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesContractNumber_c__c</fullName>
        <externalDeveloperName>SalesContractNumber__c</externalDeveloperName>
        <label>Sales Contract Number</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesContractType_c__c</fullName>
        <externalDeveloperName>SalesContractType__c</externalDeveloperName>
        <label>Sales Contract Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Placement</fullName>
                </value>
                <value>
                    <fullName>Cost per Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <externalDeveloperName>SerialNumber</externalDeveloperName>
        <label>Serial Number</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceResourceEmail_c__c</fullName>
        <externalDeveloperName>ServiceResourceEmail__c</externalDeveloperName>
        <label>Service Resource Email</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ServiceResourceManagerEmail_c__c</fullName>
        <externalDeveloperName>ServiceResourceManagerEmail__c</externalDeveloperName>
        <label>Service Resource Manager Email</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ServiceResource_c__c</fullName>
        <externalDeveloperName>ServiceResource__c</externalDeveloperName>
        <label>Service Resource</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_End_Date_c__c</fullName>
        <externalDeveloperName>Service_Contract_End_Date__c</externalDeveloperName>
        <label>Service Contract End Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Number_c__c</fullName>
        <externalDeveloperName>Service_Contract_Number__c</externalDeveloperName>
        <label>Service Contract Number</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Start_Date_c__c</fullName>
        <externalDeveloperName>Service_Contract_Start_Date__c</externalDeveloperName>
        <label>Service Contract Start Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Type_c__c</fullName>
        <externalDeveloperName>Service_Contract_Type__c</externalDeveloperName>
        <label>Service Contract Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANNUAL CERT-VITEK C</fullName>
                </value>
                <value>
                    <fullName>APC SMT-1000 UPS 120V</fullName>
                </value>
                <value>
                    <fullName>APPLICATOR SIMPLEX C76</fullName>
                </value>
                <value>
                    <fullName>BME SUPPORT KIT - EASYMAG</fullName>
                </value>
                <value>
                    <fullName>BME SUPPORT KIT - VITEK 2</fullName>
                </value>
                <value>
                    <fullName>BME SUPPORT KIT-BACT/ALERT 3D</fullName>
                </value>
                <value>
                    <fullName>BTA3D COMBINATION MODULE RIGHT</fullName>
                </value>
                <value>
                    <fullName>BUSINESS HOURS ONLY FULL SERVICE AGREEM.</fullName>
                </value>
                <value>
                    <fullName>CREDIT CARD ONLY</fullName>
                </value>
                <value>
                    <fullName>DEMO-AIR IDEAL</fullName>
                </value>
                <value>
                    <fullName>DEMO-APS ONE</fullName>
                </value>
                <value>
                    <fullName>DEMO-BACT/ALERT 3D</fullName>
                </value>
                <value>
                    <fullName>DEMO-BACT/ALERT CLAS.</fullName>
                </value>
                <value>
                    <fullName>DEMO-BACTIFLOW</fullName>
                </value>
                <value>
                    <fullName>DEMO-BACTIFLOW ALS BMX R&amp;D</fullName>
                </value>
                <value>
                    <fullName>DEMO-CHEMSCAN RDI</fullName>
                </value>
                <value>
                    <fullName>DEMO-D COUNT</fullName>
                </value>
                <value>
                    <fullName>DEMO-DILUMAT INDUSTRY MRKTG</fullName>
                </value>
                <value>
                    <fullName>DEMO-DIVERSILAB</fullName>
                </value>
                <value>
                    <fullName>DEMO-EASY Q</fullName>
                </value>
                <value>
                    <fullName>DEMO-EASYMAG</fullName>
                </value>
                <value>
                    <fullName>DEMO-LABGUARD</fullName>
                </value>
                <value>
                    <fullName>DEMO-MASTERCLAVE 09 BMX IND R&amp;D</fullName>
                </value>
                <value>
                    <fullName>DEMO-MASTERCLAVE 5-28 - BMX INDUSTRY</fullName>
                </value>
                <value>
                    <fullName>DEMO-MASTERCLAVE 60</fullName>
                </value>
                <value>
                    <fullName>DEMO-MINIMAG</fullName>
                </value>
                <value>
                    <fullName>DEMO-MINIVIDAS</fullName>
                </value>
                <value>
                    <fullName>DEMO-MYLA</fullName>
                </value>
                <value>
                    <fullName>DEMO-OBSERVA</fullName>
                </value>
                <value>
                    <fullName>DEMO-PM05</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SoftwareOptionVersion_c__c</fullName>
        <externalDeveloperName>SoftwareOptionVersion__c</externalDeveloperName>
        <label>Software Option Version</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUIT 1.0</fullName>
                </value>
                <value>
                    <fullName>SUIT 2.4</fullName>
                </value>
                <value>
                    <fullName>SUIT 3.0</fullName>
                </value>
                <value>
                    <fullName>NUCLISENTRAL V 1.0</fullName>
                </value>
                <value>
                    <fullName>NUCLISENTRAL V 1.1</fullName>
                </value>
                <value>
                    <fullName>WASPLAB LIS</fullName>
                </value>
                <value>
                    <fullName>WAPLAB MYLA INTERFACE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SoftwareVersion_c__c</fullName>
        <externalDeveloperName>SoftwareVersion__c</externalDeveloperName>
        <label>Software Version</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AIR IDEAL TRACEABILITY 1.1</fullName>
                </value>
                <value>
                    <fullName>AIR IDEAL TRACEABILITY 2</fullName>
                </value>
                <value>
                    <fullName>ARGENE CONNECT V1.0</fullName>
                </value>
                <value>
                    <fullName>ATB EUFR-08</fullName>
                </value>
                <value>
                    <fullName>ATB EUINT-08</fullName>
                </value>
                <value>
                    <fullName>ATB GOLO 05</fullName>
                </value>
                <value>
                    <fullName>ATB INT 05</fullName>
                </value>
                <value>
                    <fullName>BACT VIEW C.30B</fullName>
                </value>
                <value>
                    <fullName>BTA 3D B.25.23</fullName>
                </value>
                <value>
                    <fullName>BTA 3D B.30</fullName>
                </value>
                <value>
                    <fullName>BTA 3D B.40</fullName>
                </value>
                <value>
                    <fullName>BTA 3D B.40.42</fullName>
                </value>
                <value>
                    <fullName>BTA 3D B.40.48</fullName>
                </value>
                <value>
                    <fullName>BTA 3D B.40 RELEASE 4</fullName>
                </value>
                <value>
                    <fullName>BTA 3D B.50</fullName>
                </value>
                <value>
                    <fullName>DAVINCI 1.3.1.2</fullName>
                </value>
                <value>
                    <fullName>DAVINCI 1.3.1.4</fullName>
                </value>
                <value>
                    <fullName>DAVINCI QUATTRO 6.02A</fullName>
                </value>
                <value>
                    <fullName>DAVINCI QUATTRO 6.10A</fullName>
                </value>
                <value>
                    <fullName>D-COUNT 25-50 1.2.1</fullName>
                </value>
                <value>
                    <fullName>DILUMAT - DOUBAH - 1.0.5028</fullName>
                </value>
                <value>
                    <fullName>DILUMAT - ELDERBERRY - 1.0.508</fullName>
                </value>
                <value>
                    <fullName>DILUMAT - ELDERBERRY - 1.1.516</fullName>
                </value>
                <value>
                    <fullName>DILUMAT - ELDERBERRY - 1.1.543</fullName>
                </value>
                <value>
                    <fullName>DILUMAT - ELDERBERRY - 1.1.580</fullName>
                </value>
                <value>
                    <fullName>DILUMAT - FIG - 1.2.5821</fullName>
                </value>
                <value>
                    <fullName>DILUMAT - FIG - 1.2.6199</fullName>
                </value>
                <value>
                    <fullName>DILUMAT - FIG - 1.2.6358</fullName>
                </value>
                <value>
                    <fullName>DIVERSILAB 3.4</fullName>
                </value>
                <value>
                    <fullName>DIVERSILAB 3.5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatisticalUOM_c__c</fullName>
        <externalDeveloperName>StatisticalUOM__c</externalDeveloperName>
        <label>Statistical Unit of Measure</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TODO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <externalDeveloperName>Status</externalDeveloperName>
        <label>Status</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired Tool</fullName>
                </value>
                <value>
                    <fullName>Calibration In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StockKeepingUnit__c</fullName>
        <externalDeveloperName>StockKeepingUnit</externalDeveloperName>
        <label>Product SKU</label>
        <length>180</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemAssetNumber_c__c</fullName>
        <externalDeveloperName>SystemAssetNumber__c</externalDeveloperName>
        <inlineHelpText>SAP Number of the Root Asset.</inlineHelpText>
        <label>System Asset Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TECH_bMxAssetWithDistributorAccount_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>TECH_bMxAssetWithDistributorAccount__c</externalDeveloperName>
        <label>TECH-bMx Asset with Distributor Account</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_bioMerieuxAsset_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>TECH_bioMerieuxAsset__c</externalDeveloperName>
        <label>TECH - bioMerieux Asset</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_AssetsPendingList_c__c</fullName>
        <externalDeveloperName>Tech_AssetsPendingList__c</externalDeveloperName>
        <label>Tech_AssetsPendingList</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tech_OrgURL_c__c</fullName>
        <externalDeveloperName>Tech_OrgURL__c</externalDeveloperName>
        <label>Tech_OrgURL</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tech_PartnerCommunityURL_c__c</fullName>
        <externalDeveloperName>Tech_PartnerCommunityURL__c</externalDeveloperName>
        <label>Tech_PartnerCommunityURL</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ToolAssignedUser_c__c</fullName>
        <externalDeveloperName>ToolAssignedUser__c</externalDeveloperName>
        <label>Tool: Assigned User</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToolName_c__c</fullName>
        <externalDeveloperName>ToolName__c</externalDeveloperName>
        <inlineHelpText>Optional tool name, if not populated the name will be populated from the product name</inlineHelpText>
        <label>Tool Name (optional)</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UDIDICode_c__c</fullName>
        <externalDeveloperName>UDIDICode__c</externalDeveloperName>
        <label>UDI-DI Code</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UsageEndDate__c</fullName>
        <externalDeveloperName>UsageEndDate</externalDeveloperName>
        <label>Usage End Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ValidFrom_c__c</fullName>
        <externalDeveloperName>ValidFrom__c</externalDeveloperName>
        <inlineHelpText>The validity start date of the Equipment</inlineHelpText>
        <label>Valid From</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ValidateResetComment_c__c</fullName>
        <externalDeveloperName>ValidateResetComment__c</externalDeveloperName>
        <label>Validate/Reset Comment</label>
        <length>32768</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VilinkURL_c__c</fullName>
        <externalDeveloperName>VilinkURL__c</externalDeveloperName>
        <inlineHelpText>The Vilink URL</inlineHelpText>
        <label>Vilink (URL)</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Vilink_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Vilink__c</externalDeveloperName>
        <label>Vilink</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisibleforDistributors_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>VisibleforDistributors__c</externalDeveloperName>
        <inlineHelpText>When checked: On the Partner Portal, it will make this Asset visible to Distributors having visibility on this customer.
When unchecked: On the Partner Portal, this Asset will NOT be visible to Distributors having visibility on this customer.</inlineHelpText>
        <label>Visible for Distributors</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkCenter_c__c</fullName>
        <externalDeveloperName>WorkCenter__c</externalDeveloperName>
        <inlineHelpText>The main work center (defined in SAP)</inlineHelpText>
        <label>Work Center</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YearlyCommitedQuantity_c__c</fullName>
        <externalDeveloperName>YearlyCommitedQuantity__c</externalDeveloperName>
        <label>Yearly Commited Quantity</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isAssetNotOnCorrectAccount_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isAssetNotOnCorrectAccount__c</externalDeveloperName>
        <label>Asset not on correct Account ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isAssetOnCorrectAccount_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isAssetOnCorrectAccount__c</externalDeveloperName>
        <label>Asset not on correct Account ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCalibationDueSoon_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isCalibationDueSoon__c</externalDeveloperName>
        <label>Calibration Date due soon ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <label>Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Assets</pluralLabel>
</CustomObject>